# trendr

./: .gitignore  Technical_Plan.md  Trendr_Overview.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
.claude/: settings.local.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  reddit.rs  settings.rs  topics.rs  x.rs  youtube.rs
src/main/: background.ts  database.ts  index.ts  ipc-handlers.ts  preload.ts  settings.ts
src/main/collectors/: reddit.ts
src/main/processors/: topic-extractor.ts
src/main/types/: sql.js.d.ts
src/renderer/: App.tsx  api.ts  index.html  vite-env.d.ts
src/renderer/pages/: Dashboard.tsx  Settings.tsx  Topics.tsx
src/renderer/styles/: index.css
src/shared/: constants.d.ts  constants.d.ts.map  constants.js  constants.js.map  constants.ts  types.d.ts  types.d.ts.map  types.ts
